--- a/package.json
+++ b/package.json
@@ -8,4 +8,5 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "material-design-icon
+    "material-design-icons": "^3.0.1",
+    "material-design
