--- a/package.json
+++ b/package.json
@@ -9,4 +9,5 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "material-design-icons": "^3.0.1",
-    "material-design
+    "material-design-icons-iconfont": "^5.0.1",
+    "vue"
