--- a/package.json
+++ b/package.json
@@ -11,4 +11,6 @@
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.12",
-    "vue-router": "^3.4.
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.4.3",
+    "
