--- a/package.json
+++ b/package.json
@@ -17,4 +17,5 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-service
+    "@vue/cli-service": "^4.5.4",
+    "sass": "^1.32.5
