--- a/package.json
+++ b/package.json
@@ -18,4 +18,5 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-service": "^4.5.4",
-    "sass": "^1.32.5
+    "sass": "^1.32.5",
+    "sass-loader": "^8.0.2",
