--- a/package.json
+++ b/package.json
@@ -22,4 +22,5 @@
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.12",
-    "vue2-ace-editor
+    "vue2-ace-editor": "0.0.15",
+    "vuetify
