--- a/package.json
+++ b/package.json
@@ -23,4 +23,6 @@
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.12",
     "vue2-ace-editor": "0.0.15",
-    "vuetify
+    "vuetify-loader": "^1.7.1"
+  },
+  "brow
